[package]
name = "hodiny"
version = "0.0.1"
edition = "2021"

[dependencies]
rustysynth = "1.1.2"
#rodio = "0.17.1"
#midi-msg = "0.4.0"
tinyaudio = "0.1.1"
itertools = "0.10.5"
midly = "0.5.3"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

