[package]
name = "hodiny"
version = "0.0.1"
edition = "2021"

[dependencies]
rustysynth = "1.3.5"
tinyaudio = "1.1.0"
itertools = "0.14.0"
midly = "0.5.3"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

